[gd_scene load_steps=5 format=3 uid="uid://bh68b7sro6i1v"]

[ext_resource type="PackedScene" uid="uid://176g3cp8n76a" path="res://scenes/block_window/block_environment/g_block_schema/g_block/g_block.tscn" id="1_277fd"]
[ext_resource type="Script" path="res://scenes/block_window/block_environment/g_block_schema/block_end_if/g_block_end_if.gd" id="2_edqw4"]
[ext_resource type="PackedScene" uid="uid://cq3i7td46je11" path="res://scenes/block_window/block_environment/g_block_schema/g_block/gui_point_links/g_end_point.tscn" id="3_nnoeo"]
[ext_resource type="PackedScene" uid="uid://dvd6ysg6qyrj2" path="res://scenes/block_window/block_environment/g_block_schema/g_block/gui_point_links/g_begin_point.tscn" id="4_8fmxc"]

[node name="GBlockEndIf" instance=ExtResource("1_277fd")]
script = ExtResource("2_edqw4")

[node name="Type" parent="Control/MarginContainer/Content" index="1"]
text = "Конец если"

[node name="GEndPoint" parent="EndPoints" index="0" instance=ExtResource("3_nnoeo")]
position = Vector2(-45, -50)

[node name="GEndPoint2" parent="EndPoints" index="1" instance=ExtResource("3_nnoeo")]
position = Vector2(45, -50)

[node name="GBeginPoint" parent="BeginPoints" index="0" instance=ExtResource("4_8fmxc")]
position = Vector2(0, 50)
